[package]
name = "game_jam1"
version = "0.1.0"
authors = ["connorguarino01 <connorguarino01@gmail.com>", "nolanrosen15 <nolanrosen15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "game_jam1_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "game_jam1_bin"
path = "src/main.rs"

[dependencies.amethyst]
version = "0.13.2"
features = ["vulkan"]