[package]
name = "game_jam1"
version = "0.1.0"
authors = ["connorguarino01 <connorguarino01@gmail.com>", "nolanrosen15 <nolanrosen15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.5.1"

[dependencies.amethyst]
version = "0.13.2"
features = ["vulkan", "tiles"]

[dependencies.serde]
version = "1.0"
features = ["derive"]